# VkP2-Template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vkp2_template.pyke
.claude/: settings.local.json
app/: CMakeLists.txt
app/src/: main.cpp
app/src/engine/: engine.cpp  engine.hpp
libs/ImGui/: CMakeLists.txt
libs/SDL3/: CMakeLists.txt
